# bzlcon24-demo

./: .bazelrc  .bazelversion  .gitignore  Dockerfile  MODULE.bazel  README.md  flake.nix
config/: BUILD.bazel
examples/simple/: BUILD.bazel  script.sh
utils/: external_deps_filegroup.bzl  starlark_new_local_repository.bzl  strings.bzl  type_check.bzl
